--- a/public/master.css
+++ b/public/master.css
@@ -1,8 +1,75 @@
 .correct {
-  text-shadow: 0 1px 1px #00bb22;
+  text-shadow: 0 1px 2px #00bb22;
 }
 
 .wrong {
-  text-shadow: 0 1px 1px #FFFFFF;
+  text-shadow: 0 1px 2px #bb0000;
 }
 
+body {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+#test {
+  position: absolute;
+  left: 50%;
+}
+
+#subject {
+  font-size: 48pt;
+  top: 10%;
+  left: 50%;
+  position: absolute;
+}
+
+#kana_answer {
+  font-size: 48pt;
+  top: 25%;
+  left: 40%;
+  position: absolute;
+}
+
+#rj_answer {
+  font-size: 48pt;
+  top: 25%;
+  left: 60%;
+  position: absolute;
+}
+
+#attempts {
+  font-size: 32pt;
+  top: 25%;
+  left: 50%;
+  text-align: center;
+  position: absolute;
+}
+
+#kana_entry {
+  font-size: 32pt;
+  top: 45%;
+  left: 25%;
+  position: absolute;
+}
+
+#rj_entry {
+  font-size: 32pt;
+  top: 45%;
+  left: 75%;
+  position: absolute;
+  text-align: center;
+}
+#kana_overlay {
+  font-size: 32pt;
+  top: 45%;
+  left: 25%;
+  position: absolute;
+  text-align: center;
+}
+
+#rj_overlay {
+  font-size: 32pt;
+  top: 45%;
+  left: 75%;
+  position: absolute;
+  text-align: center;
+}
